tests/e2e/pass/v7_i64_u64_bits_cast.ep
# EXIT: 0
fun main(): i64 {
    let signed: i64 = -1
    let unsigned: u64 = u64(signed)
    if unsigned != (u64(0) - u64(1)) { return 12 }

    let signed_again: i64 = i64(unsigned)
    if signed_again != (0 - 1) { return 13 }

    return 0
}
