tests/e2e/fail/integer_unsigned_negative.ep
# COMPILE_ERROR: unary - requires a signed integer, got u8
fun main(): void {
    let value = -1u8
}
